add redis caching

--- a/AuthService.API/appsettings.Production.json
+++ b/AuthService.API/appsettings.Production.json
@@ -1,7 +1,8 @@
 {
   "ProductService": "http://products-clusterip-srv:80/api/c/customers/",
   "ConnectionStrings": {
-    "AuthConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=authdb;User ID=sa;Password=pa55w0rd!;"
+    "AuthConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=authdb;User ID=sa;Password=pa55w0rd!;",
+    "Redis": "redis-15253.c292.ap-southeast-1-1.ec2.cloud.redislabs.com:15253,password=D28dIGdIlTgEauO71Wqpg2rRZiqJoXNU"
   },
   "RabbitMQHost": "rabbitmq-clusterip-srv",
   "RabbitMQPort": "5672",
