--- a/ProductService.API/appsettings.Production.json
+++ b/ProductService.API/appsettings.Production.json
@@ -3,6 +3,7 @@
   "RabbitMQPort": "5672",
   "GrpcAuth": "http://auths-clusterip-srv:666" ,
   "ConnectionStrings": {
-    "ProductConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=productdb;User ID=sa;Password=pa55w0rd!;"
+    "ProductConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=productdb;User ID=sa;Password=pa55w0rd!;",
+    "Redis": "redis-15253.c292.ap-southeast-1-1.ec2.cloud.redislabs.com:15253,password=D28dIGdIlTgEauO71Wqpg2rRZiqJoXNU"
   }
 }
