--- a/ProductService.Repositories/ProductService.Repositories.csproj
+++ b/ProductService.Repositories/ProductService.Repositories.csproj
@@ -25,6 +25,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.8" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.12" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 	</ItemGroup>
