--- a/K8S/ingress-srv.yaml
+++ b/K8S/ingress-srv.yaml
@@ -31,6 +31,13 @@ spec:
                 name: auths-clusterip-srv
                 port:
                   number: 80
+          - path: /api/auths
+            pathType: Prefix
+            backend:
+              service:
+                name: auths-clusterip-srv
+                port:
+                  number: 80
           - path: /api/c/customers
             pathType: Prefix
             backend:
