update cache service

--- a/ProductService.API/appsettings.Development.json
+++ b/ProductService.API/appsettings.Development.json
@@ -10,7 +10,7 @@
   "RabbitMQPort": "5672",
   "GrpcAuth": "https://localhost:5001" ,
   "ConnectionStrings": {
-    "ProductConn": "Server=localhost,1433;Initial Catalog=productdb;User ID=sa;Password=12345;",
-    "Redis": "redis-15253.c292.ap-southeast-1-1.ec2.cloud.redislabs.com:15253,password=D28dIGdIlTgEauO71Wqpg2rRZiqJoXNU"
+    "ProductConn": "Server=localhost;Initial Catalog=productdb;User ID=sa;Password=12345;",
+    "Redis": "redis-15227.c252.ap-southeast-1-1.ec2.cloud.redislabs.com:15227,password=CPSCGH2wBDGDcg4AvGlMUKeVAdWJ6bak"
   }
 }
