--- a/AuthService.API/appsettings.Development.json
+++ b/AuthService.API/appsettings.Development.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "AuthConn": "Server=localhost,1433;Initial Catalog=authdb;User ID=sa;Password=12345;",
-    "Redis": "redis-15253.c292.ap-southeast-1-1.ec2.cloud.redislabs.com:15253,password=D28dIGdIlTgEauO71Wqpg2rRZiqJoXNU"
+    "AuthConn": "Server=localhost;Initial Catalog=authdb;User ID=sa;Password=12345;",
+    "Redis": "redis-15227.c252.ap-southeast-1-1.ec2.cloud.redislabs.com:15227,password=CPSCGH2wBDGDcg4AvGlMUKeVAdWJ6bak"
   },
   "RabbitMQHost": "localhost",
   "RabbitMQPort": "5672",
