update api authen

--- a/AuthService.API/appsettings.json
+++ b/AuthService.API/appsettings.json
@@ -6,6 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "AuthConn": "Server=localhost;Initial Catalog=authdb;User ID=sa;Password=12345;",
+    "Redis": "redis-15227.c252.ap-southeast-1-1.ec2.cloud.redislabs.com:15227,password=CPSCGH2wBDGDcg4AvGlMUKeVAdWJ6bak"
+  },
   "AllowedHosts": "*",
   "ApiSettings": {
     "JwtOptions": {
