--- a/ProductService.API/appsettings.json
+++ b/ProductService.API/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSettings": {
+    "JwtOptions": {
+      "SecretKey": "This is the secret key used for encryption replace it with your own secret",
+      "Issuer": "auth-api",
+      "Audience": "client",
+      "AccessTokenExpiration": 15,
+      "RefreshTokenExpiration": 30
+    }
+  }
 }
