--- a/K8S/ingress-srv.yaml
+++ b/K8S/ingress-srv.yaml
@@ -10,7 +10,7 @@ spec:
     - host: antchores-v1.com
       http:
         paths:
-          - path: /api/a/customers
+          - path: /api/a
             pathType: Prefix
             backend:
               service:
