--- a/K8S/ingress-srv.yaml
+++ b/K8S/ingress-srv.yaml
@@ -17,6 +17,13 @@ spec:
                 name: auths-clusterip-srv
                 port:
                   number: 80
+          - path: /swagger
+            pathType: Prefix
+            backend:
+              service:
+                name: auths-clusterip-srv
+                port:
+                  number: 80
           - path: /api/p
             pathType: Prefix
             backend:
