--- a/ProductService.API/Properties/launchSettings.json
+++ b/ProductService.API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:6000;http://*:6000;"
+      "applicationUrl": "https://localhost:6000;http://localhost:6001;"
     },
     "Docker": {
       "commandName": "Docker",
